--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "tokun",
   "version": "1.0.0",
   "description": "A wrapper library around https://github.com/takuyaa/kuromoji.js that intelligently groups Japanese morphemes into words",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "files": [
-    "/dist"
+    "dist/"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf dist/",
+    "compile": "tsc --declaration",
+    "lint": "tslint --project tsconfig.json",
+    "prepublish": "npm run compile",
+    "test": "mocha"
   },
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/chai": "^4.3.11",
     "@types/kuromoji": "^0.1.3",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.3",
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
+    "tslint": "^6.1.3",
     "typescript": "^5.3.2"
   },
   "dependencies": {
