--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "compile": "tsc --declaration",
     "lint": "tslint --project tsconfig.json",
     "prepublish": "npm run compile",
-    "test": "mocha"
+    "test": "mocha \"./test/*.{js,cjs,mjs,ts}\""
   },
   "author": "",
   "license": "Apache-2.0",
@@ -23,6 +23,7 @@
     "@types/node": "^20.10.3",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^5.3.2"
   },
