--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "rm -rf dist/",
     "compile": "tsc --declaration",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint \"./{src,test}/**/*.{js,cjs,mjs,ts}\"",
     "prepublish": "npm run compile",
     "test": "mocha \"./test/*.{js,cjs,mjs,ts}\""
   },
@@ -21,10 +21,12 @@
     "@types/kuromoji": "^0.1.3",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.3",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "chai": "^4.3.10",
+    "eslint": "^8.55.0",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
     "typescript": "^5.3.2"
   },
   "dependencies": {
