--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@scriptin/jmdict-simplified-types": "^3.5.0",
     "@types/chai": "^4.3.11",
     "@types/kuromoji": "^0.1.3",
     "@types/mocha": "^10.0.6",
