--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "tokun",
   "version": "1.0.0",
   "description": "A wrapper library around https://github.com/takuyaa/kuromoji.js that intelligently groups Japanese morphemes into words",
+  "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/"
@@ -11,22 +13,30 @@
     "clean": "rm -rf dist/",
     "lint": "eslint \"./{src,test}/**/*.{js,cjs,mjs,ts}\"",
     "test": "mocha \"./test/*.{js,cjs,mjs,ts}\"",
-    "compile": "tsc --declaration",
-    "prepublish": "npm run clean && npm run lint && npm run test && npm run compile"
+    "build": "rollup --config",
+    "dev": "rollup --config --watch",
+    "prepublish": "npm run clean && npm run lint && npm run test && npm run build"
   },
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@scriptin/jmdict-simplified-types": "^3.5.0",
     "@types/chai": "^4.3.11",
     "@types/kuromoji": "^0.1.3",
     "@types/mocha": "^10.0.6",
+    "@types/ms": "^0.7.34",
     "@types/node": "^20.10.3",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "chai": "^4.3.10",
     "eslint": "^8.55.0",
     "mocha": "^10.2.0",
+    "rollup": "^4.6.1",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-dts": "^6.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
