--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "target": "es2015",
     "declaration": true,
-    "outDir": "./dist",
+    "outDir": "./dist/dts",
     "sourceMap": true,
     "strict": true
   },
