--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,7 +1,12 @@
 {
-  "extension": [
+  "spec": [
+    "test/**/*.spec.*"
+  ],
+  "extensions": [
     "ts"
   ],
-  "spec": "test/**/*.spec.ts",
-  "require": "ts-node/register"
+  "loader": "ts-node/esm",
+  "watch-files": [
+    "test"
+  ]
 }
