--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "target": "es2015",
     "declaration": true,
-    "outDir": "./dist/dts",
+    "outDir": "./dist",
     "sourceMap": true,
     "strict": true
   },
