--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepublish": "npm run clean && npm run lint && npm run test && npm run build"
   },
   "author": "",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
