--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^6.13.2",
     "chai": "^4.3.10",
     "eslint": "^8.55.0",
+    "generate-license-file": "^3.0.1",
     "mocha": "^10.2.0",
     "rollup": "^4.6.1",
     "rollup-plugin-delete": "^2.0.0",
