--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "coverage": "c8 --lines 95 --functions 95 --branches 95 npm test",
     "build": "rollup --config",
     "dev": "rollup --config --watch",
-    "prepublish": "npm run clean && npm run lint && npm run test && npm run build"
+    "prepublish": "npm run clean && npm run lint && npm run coverage && npm run build"
   },
   "repository": {
     "type": "git",
