--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,13 @@
         "@typescript-eslint"
     ],
     "root": true,
-    "rules": {}
+    "rules": {
+        "no-restricted-syntax": [
+            "error",
+            {
+                "selector": "TSEnumDeclaration",
+                "message": "Don't declare enums"
+            }
+        ]
+    }
 }
